Use immutable lists where possible and generally tidy things a bit
Signed-off-by: cpw <cpw+github@weeksfamily.ca>